# SubQuick

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  reasonix.toml  requirements.txt
app/downloader/: __init__.py  base.py  manager.py  opensubtitles.py  registry.py  shooter.py  subdl_provider.py  subliminal_provider.py
app/matcher/: __init__.py  language_priority.py  subtitle_matcher.py
app/models/: __init__.py  settings.py  subtitle.py  task.py  video.py
app/scanner/: __init__.py  file_filter.py  subtitle_detector.py  video_scanner.py
app/services/: __init__.py  download_service.py  scan_cache.py  scan_service.py  settings_service.py
app/ui/: __init__.py  app.py  theme.py
app/ui/components/: __init__.py  progress_panel.py  search_dialog.py  status_badge.py  video_table.py
app/ui/pages/: __init__.py  main_page.py  settings_page.py  wizard_page.py
app/utils/: file_utils.py  hasher.py  logging.py  network.py
config/: default_settings.json  user_settings.backup.json  user_settings.json
docs/: API文档-射手网.md  DESIGN.md  DEVELOPMENT_PLAN.md
scripts/: build.ps1  check_network.ps1  check_network.py  lint.ps1  run_dev.ps1  test.ps1
tests/: conftest.py
tests/integration/: test_downloader.py  test_flow.py  test_scanner.py  test_settings_service.py
tests/unit/: test_file_filter.py  test_matcher.py  test_scanner.py  test_settings.py  test_subtitle.py  test_subtitle_detector.py  test_task.py  test_ui_components.py  test_video.py
